# boa

./: .gitignore  Cargo.toml  bench.py  bench.sh  benchmcrl2.py  benchresults.csv  benchresults_fxhash.csv  benchresultsmcrl2.csv  benchresultsmcrl2_all.csv  benchresultsmcrl2_bisim.csv  benchresultsmcrl2_rep2.csv  benchresultsmcrl2_rep456.csv  benchtable.html  boa_notes.md  count.sh  mcrl2comp.csv  min.txt  mksourceszip.sh  results.md
.github/workflows/: ci.yml
benchresults/: boa-coalg__rep2__2022-11-03__00:16:41.txt  boa-lts__rep10__2022-11-03__02:34:44.txt  boa-lts__rep2__2022-11-03__00:19:52.txt  copar-dcpr-coalg.txt
benchresults/latextables/: tables2.tex  tables2_mps.tex  (+1 more)
misc/: benchresults.csv  benchresults_ahash.csv  benchresults_copar.csv  benchresults_fxhash.csv  benchresultsmcrl2_all.csv  benchresultsmcrl2_rep1.csv  benchresultsmcrl2_rep3.csv  benchtable.tex  boa_notes.md  convert.sh  ltsresults.txt  maketable.py  maketablemcrl.py  results.md  thorstenresults.txt  wtaresults.txt
src/: binary_file_sizes.txt  binrep.rs  coalg.rs  convert.py  hmap.rs  io.rs  main.rs  main_spec.rs  naivealg.rs  optalg.rs  parsing.rs  refpart.rs  util.rs
tests/: paper_test1.boa  paper_test1.boa.txt  paper_test10.boa  paper_test10.boa.txt  paper_test2.boa  paper_test2.boa.txt  paper_test3.boa  paper_test3.boa.txt  paper_test4.boa  paper_test4.boa.txt  paper_test5.boa  paper_test5.boa.txt  paper_test6.boa  paper_test7.boa  paper_test7.boa.txt  paper_test8.boa  paper_test8.boa.txt  paper_test9.boa  paper_test9.boa.txt  test1.boa  test1_converted.boa.txt  test2.boa.txt
(+11 files in other folders)
