[package]
name = "boa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.0"
itertools = "0.8.0"
ahash = "0.7.6"
lexical = "6.1.0"
fxhash = "0.2.1"
byteorder = "1.4.3"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.3.2"

[profile.dev]
opt-level = 3
incremental = false
codegen-units = 16

[profile.release]
lto = true
codegen-units = 1